--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,14 +4,12 @@ spring.mvc.view.suffix=.jsp
 logging.level.org.springframework=info
 
 spring.mvc.format.date=yyyy-MM-dd
-spring.datasource.platform=postgres
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?useUnicode=yes&characterEncoding=UTF-8
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.tomcat.connection-properties=useUnicode=true;characterEncoding=utf-8;
-security.ignored=/**
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.jpa.hibernate.ddl-auto=update
 
