--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,14 +4,18 @@ spring.mvc.view.suffix=.jsp
 logging.level.org.springframework=info
 
 spring.mvc.format.date=yyyy-MM-dd
-
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.packages-to-scan=com.example.RappersInfo.demo.rapperdatabase.info
 spring.jpa.hibernate.ddl-auto=update
+
+spring.main.web-application-type=SERVLET
+
+
 
 spring.datasource.initialization-mode=never
 spring.http.encoding.charset=UTF-8
