--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.prefix=/WEB-INF/classes/META-INF/resources/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 logging.level.org.springframework=info
 
