tests to connect app with postgresql at railway.app

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,12 @@ spring.mvc.view.suffix=.jsp
 logging.level.org.springframework=info
 
 spring.mvc.format.date=yyyy-MM-dd
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:postgresql://containers-us-west-84.railway.app:5676/railway?useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.username=postgres
+spring.datasource.password=W6KXAGpBbrjsvMyTeZvv
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.tomcat.connection-properties=useUnicode=true;characterEncoding=utf-8;
+security.ignored=/**
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.packages-to-scan=com.example.RappersInfo.demo.rapperdatabase.info
 spring.jpa.hibernate.ddl-auto=update
