--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.mvc.view.suffix=.jsp
 logging.level.org.springframework=info
 
 spring.mvc.format.date=yyyy-MM-dd
-spring.datasource.url=jdbc:postgresql://containers-us-west-84.railway.app:5676/railway?useUnicode=yes&characterEncoding=UTF-8
-spring.datasource.username=postgres
-spring.datasource.password=W6KXAGpBbrjsvMyTeZvv
+spring.datasource.url=####
+spring.datasource.username=#####
+spring.datasource.password=#####
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.tomcat.connection-properties=useUnicode=true;characterEncoding=utf-8;
 security.ignored=/**
